err.txt
C:\Users\JacobH\Documents\dev\ProjectManagement\script.js:1478
    const dragHandle = el("div", { className: "checklist-drag-handle", title: "Drag to reorder (Coming soon)" });
          ^

SyntaxError: Identifier 'dragHandle' has already been declared
    at wrapSafe (node:internal/modules/cjs/loader:1691:18)
    at checkSyntax (node:internal/main/check_syntax:76:3)

Node.js v24.9.0
